<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/navigation_menu_home"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_iconColor="#FFFFFF"
        app:cnb_textColor="#FFFFFF"/>
    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ic_help"
        android:title="@string/navigation_menu_help"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_iconColor="#FFFFFF"
        app:cnb_textColor="#FFFFFF"/>
    <item
        android:id="@+id/navigation_pet"
        android:icon="@drawable/ic_pet"
        android:title="@string/navigation_menu_pet"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_iconColor="#FFFFFF"
        app:cnb_textColor="#FFFFFF"/>
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/navigation_menu_profile"
        app:cnb_backgroundColor="@color/colorPrimary"
        app:cnb_iconColor="#FFFFFF"
        app:cnb_textColor="#FFFFFF"/>
</menu>