<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp.SignUpActivity"
    android:background="@drawable/registerbackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/CustomActionBar"/>

    <LinearLayout
        android:id="@+id/LinearLayout_RegisterForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/EditText_SignUpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EditText_name"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:textStyle="bold"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/EditText_SignUpSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EditText_surname"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:textStyle="bold"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/EditText_SignUpDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_birthdate"
            android:inputType="date"
            android:textSize="20sp"
            android:textStyle="bold"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/EditText_SignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EditText_email"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:textStyle="bold"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/EditText_SignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EditText_password"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textStyle="bold"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/EditText_SignUpRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EditText_repeat_password"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textStyle="bold"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorAccent"
            app:met_singleLineEllipsis="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout_RegisterForm">

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/Button_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            fancy:fb_defaultColor="#43a047"
            fancy:fb_focusColor="#9bd823"
            fancy:fb_fontIconResource="\uf1b0"
            fancy:fb_fontIconSize="30dp"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="5dp"
            fancy:fb_text=" Registrarme"
            fancy:fb_textColor="#FFFFFF"
            fancy:fb_textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>