<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity"
    android:background="@drawable/loginbackground2">

    <LinearLayout
        android:id="@+id/LinearLayout_EmailPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/EditText_LoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EditText_email"
            android:inputType="textEmailAddress"
            android:textSize="25sp"
            android:textStyle="bold"
            app:met_baseColor="@android:color/background_dark"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimaryDark"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/EditText_LoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EditText_password"
            android:inputType="textPassword"
            android:textSize="25sp"
            android:textStyle="bold"
            app:met_baseColor="@android:color/background_dark"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="16"
            app:met_primaryColor="@color/colorPrimaryDark"
            app:met_singleLineEllipsis="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="40dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout_EmailPassword">

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/Button_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            fancy:fb_defaultColor="#43a047"
            fancy:fb_focusColor="#9bd823"
            fancy:fb_fontIconResource="\uf1b0"
            fancy:fb_fontIconSize="30dp"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="5dp"
            fancy:fb_text=" Login"
            fancy:fb_textColor="#FFFFFF"
            fancy:fb_textSize="20sp" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:padding="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="register"
            android:textAlignment="center"
            android:padding="12dp"
            android:text="@string/TextView_register"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:background="#80757575"
            android:layout_marginTop="10dp"
            android:elevation="10px"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>