<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TabFragments.Pet.Registry.RegistryPetFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        fancy:layout_constraintTop_toTopOf="parent"
        fancy:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/LinearLayout_RegisterPet"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/Shape_Image_pet"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:background="@drawable/ic_upload"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                fancy:shapeAppearance="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/LinearLayout_RegisterPet"
            tools:layout_editor_absoluteX="20dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/EditText_PetName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="22dp"
                android:hint="@string/EditText_name"
                android:inputType="text"
                android:textSize="19sp"
                android:textStyle="bold"
                app:met_baseColor="@color/colorPrimaryDark"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorAccent"
                app:met_singleLineEllipsis="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/EditText_PetBirthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="21dp"
                android:hint="@string/hint_birthdate"
                android:inputType="date"
                android:textSize="19sp"
                android:textStyle="bold"
                app:met_baseColor="@color/colorPrimaryDark"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorAccent"
                app:met_singleLineEllipsis="true" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinnerPetType"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/LinearLayout_RegisterPet"
                app:ms_text_color="@color/colorPrimaryDark2"
                fancy:ms_background_color="#FAFAFA" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinnerPetOrigin"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/LinearLayout_RegisterPet"
                app:ms_text_color="@color/colorPrimaryDark2"
                fancy:ms_background_color="#FAFAFA" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/EditText_PetDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="22dp"
                android:hint="@string/Pet_Description"
                android:inputType="textLongMessage"
                android:textSize="19sp"
                android:textStyle="bold"
                app:met_baseColor="@color/colorPrimaryDark"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorAccent"
                app:met_singleLineEllipsis="true"
                fancy:met_maxCharacters="150" />

        </LinearLayout>



    </LinearLayout>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/Button_PetForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:padding="12dp"
        fancy:fb_defaultColor="#43a047"
        fancy:fb_focusColor="#9bd823"
        fancy:fb_fontIconResource="\uf1b0"
        fancy:fb_fontIconSize="20dp"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="5dp"
        fancy:fb_text=" Registrarme"
        fancy:fb_textColor="#FFFFFF"
        fancy:fb_textSize="15sp"
        fancy:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>